# HammerIdFix

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  premake5.lua
Core/: premake5.lua
Core/src/: core.cpp  core.h  extension.cpp  extension.h  log.h
Core/src/cs2_sdk/: schema.cpp  schema.h
Core/src/cs2_sdk/interfaces/: cgameresourceserviceserver.h  cs2_interfaces.cpp  (+1 more)
Core/src/utils/: gameconfig.cpp  gameconfig.h  globals.cpp  globals.h  hooks.cpp  hooks.h  log.cpp  log.h  memory.cpp  memory_module.cpp  memory_module.h  path.h  playerExtends.cpp  playerExtends.h  string.h  vfunc.h
DemoVoiceFix/: CMakeLists.txt  premake5.lua
DemoVoiceFix/src/: DemoVoiceFix.cpp  DemoVoiceFix.h
DemoVoiceFix/src/cs2_sdk/: schema.cpp  schema.h
DemoVoiceFix/src/utils/: gameconfig.cpp  gameconfig.h  globals.cpp  globals.h  hooks.h  log.cpp  log.h  memory.cpp  memory_module.cpp  memory_module.h  path.h  string.h  vfunc.h  virtual.h
HammerIdFix/: CMakeLists.txt
HammerIdFix/src/: HammerIdFix.cpp  HammerIdFix.h
HammerIdFix/src/cs2_sdk/: schema.cpp
HammerIdFix/src/cs2_sdk/interfaces/: cgameresourceserviceserver.h  cs2_interfaces.cpp  cs2_interfaces.h
HammerIdFix/src/utils/: gameconfig.cpp  gameconfig.h  globals.cpp  globals.h  hooks.h  log.cpp  log.h  memory.cpp  memory_module.cpp  memory_module.h  path.h  string.h  vfunc.h
HammerIdFix/src/utils/extends/: CBaseEntity.h  CBaseGrenade.h  CBaseModelEntity.h  CBasePlayerController.h  CBasePlayerPawn.h  CBaseTrigger.h  CC4.h  CCSPlayerController.h  CCSPlayerPawn.h  CCSWeaponBase.h  CChicken.h  CEnvEntityMarker.h  CGameRules.h  CParticleSystem.h  CPlantedC4.h  CSkyCamera.h  CTeam.h  CTriggerPush.h  ccollisionproperty.h  ctakedamageinfo.h  ctimer.cpp  ctimer.h  globaltypes.h  schemasystem.cpp  schemasystem.h  serversideclient.h  services.h
InventoryManager/: premake5.lua
InventoryManager/src/: CEconItem.h  InventoryManager.cpp  InventoryManager.h  InventoryManagerCore.cpp  InventoryManagerCore.h  PlayerInventory.cpp  PlayerInventory.h  WSItemManager.cpp  WSItemManager.h
InventoryManager/src/cs2_sdk/: schema.cpp  schema.h
InventoryManager/src/utils/: gameconfig.cpp  gameconfig.h  globals.cpp  globals.h  hooks.h  log.cpp  log.h  memory.cpp  memory.h  memory_module.cpp  memory_module.h  path.h  string.h  vfunc.h
configs/addons/metamod/: Core.vdf  DemoVoiceFix.vdf  HammerIdFix.vdf  InventoryManager.vdf
docker/: Dockerfile
makefiles/: linux.base.cmake  protobuf.cmake  shared.cmake  windows.base.cmake
makefiles/metamod/: DemoVoiceFix.vdf.in  HammerIdFix.vdf.in  configure_metamod.cmake
premake/: ixwebsocket.lua  spdlog.lua
premake/cmake/: cmake_project.lua  cmake_workspace.lua  init.lua
(+88 files in other folders)
